--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body{
+  background-color: #D6EAF8;
+}
+
 html , body {
 
   margin: 0.25em;
@@ -5,7 +9,7 @@ html , body {
   width: 100%;
   height: 100%;
   background-color: white;
- font-family: times new roman;
+  font-family: calibri; /*times new roman; */
  }
 
 header {
@@ -13,7 +17,7 @@ header {
   flex-direction: row;
   width: 100%;
   height: 60px;
-  background-color: white;
+  background-color: hsla(0, 100%, 70%, 0.3);
 }
 
 
@@ -39,6 +43,7 @@ header h1 {
 
 #container {
   display: flex;
+/*  flex: 1 1 auto; */
   flex-direction: row;
   height: auto;
 }
@@ -51,6 +56,7 @@ flex: 1 1 auto;
 min-width: 200px;
 flex-direction: column;
 background-color: #D6EAF8;
+padding-right: 10px;
 }
 
 
@@ -86,28 +92,19 @@ nav > a:active {
 
 
 article {
+  /* display: flex; */
   flex: 1 1 auto;
-  min-width: 200px;
+  width: 100%;
+  min-width: 380px;
   background-color: #EBF5FB;
   background-image: url("jpeg/paper.jpg");
   text-align: left;
+  padding-left: 10px;
 }
 
 
 
-article table {
-
-  margin-top: 20px;
-
-  margin-left: auto;
-
-  margin-right: auto;
-
-  position: relative;
-
-}
-
-
+/*
 
 article th {
 
@@ -167,7 +164,7 @@ hr {
 
 }
 
-
+*/
 
 aside {
   display: flex;
@@ -175,6 +172,8 @@ aside {
   min-width: 380px;
   flex-direction: column;
   background-color: #D6EAF8;
+  padding-left: 10px;
+  padding-right: 15px;
 }
 
 
@@ -210,9 +209,8 @@ aside {
   float: left;
   text-align: left;
   color: black;
-  font: bold;
+  font-weight: bold;
 }
-
 
 
 .profile img {
@@ -225,19 +223,19 @@ aside {
 .profile h4 {
   position: absolute;
   display: block;
-  margin-top: 70px;
+  margin-top: 80px;
   margin-left: 220px;
 }
 
 
 
 .profile ul {
-
   position: absolute;
   display: block;
   margin-left: -40px;
-  bottom: 0px;
+  bottom: -15px;
   left: 50%;
+  font-weight: bold;
 }
 
 
@@ -263,8 +261,8 @@ footer {
   height: 60px;
   font-size: 12px;
   color: black;
-  font: bold;
-  background-color: white;
+  font-weight: bold;
+  background-color: hsla(0, 100%, 70%, 0.3);
   margin-top: 2px;
 }
 
@@ -295,63 +293,39 @@ footer > p {
 
 
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 1000px) {
 
   #container {
-
     flex-direction: column;
-
     height: auto;
-
   }
-
-
 
   #container > article {
-
     width: 100%;
-
+    padding-left: 0px;
   }
-
-
 
   #container > nav {
-
     width: 100%;
-
+    padding-right: 0px;
   }
-
-
 
   #container > aside {
-
     width: 100%;
-
-
+    padding-left: 0px;
+    padding-bottom: 15px;
   }
-
-
 
   nav {
-
     text-align: center;
-
   }
-
-
 
   nav li {
-
       display: inline-block;
-
   }
 
-
-
   nav ul {
-
     margin-left: 0px;
-
   }
 
   .profile{
@@ -359,4 +333,271 @@ footer > p {
   margin-right: auto;
 }
 
+}
+
+/* ----------- iPhone 6, 6S, 7 and 8 ----------- */
+
+/* Portrait */
+@media only screen
+  and (min-device-width: 375px)
+  and (max-device-width: 667px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) {
+
+    #container {
+      flex-direction: column;
+      height: auto;
+    }
+
+    #container > article {
+      width: 100%;
+      padding-left: 0px;
+    }
+
+    #container > nav {
+      width: 100%;
+      padding-right: 0px;
+    }
+
+    #container > aside {
+      width: 100%;
+      padding-left: 0px;
+      padding-bottom: 15px;
+    }
+
+    nav {
+      text-align: center;
+    }
+
+    nav li {
+        display: inline-block;
+    }
+
+    nav ul {
+      margin-left: 0px;
+    }
+
+    .profile{
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+}
+
+/* Landscape */
+@media only screen
+  and (min-device-width: 375px)
+  and (max-device-width: 667px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: landscape) {
+    body{
+      background-color: #D6EAF8;
+    }
+
+    html , body {
+
+      margin: 0.25em;
+      padding: 0px;
+      width: 100%;
+      height: 100%;
+      background-color: white;
+      font-family: calibri; /*times new roman; */
+     }
+
+    header {
+      display: flex;
+      flex-direction: row;
+      width: 100%;
+      height: 60px;
+      background-color: hsla(0, 100%, 70%, 0.3);
+    }
+
+    header img {
+      height: 75%;
+      margin: 10px 0px 0px 10px;
+      float: left;
+      border-radius: 10px;
+      box-shadow: 0px 0px 10px #111;
+    }
+
+    header h1 {
+      float: left;
+      font: bold  1.6em times new roman;
+      color: #154360;
+      margin: 5px 0px 0px 10px;
+      text-shadow: 17px 17px #0066FF;
+
+    }
+
+    #container {
+      display: flex;
+    /*  flex: 1 1 auto; */
+      flex-direction: row;
+      height: auto;
+    }
+
+    nav {
+    display: flex;
+    flex: 1 1 auto;
+    min-width: 200px;
+    flex-direction: column;
+    background-color: #D6EAF8;
+    padding-right: 10px;
+    }
+
+
+    nav > a {
+      flex: 0 0 50px;
+      width:100%;
+      border-top: 1px solid white;
+      border-bottom: 1px solid white;
+      color: #000;
+      padding-top: 10px;
+      line-height: 40px;
+      text-align: center;
+      text-decoration: none;
+      white-space: nowrap;
+      border-radius: 10px;
+      box-shadow: 0px 0px 10px #111;
+    }
+
+    nav > a > span {
+      font: bold  1.4em times new roman;
+      color: #154360;
+      /* text-shadow: 5px 5px #0066FF; */
+      vertical-align:middle;
+    }
+
+    nav > a:hover {
+      background-color: white;
+    }
+
+    nav > a:active {
+      color: #fff;
+    }
+
+
+    article {
+      /* display: flex; */
+      flex: 1 1 auto;
+      width: 100%;
+      min-width: 380px;
+      background-color: #EBF5FB;
+      background-image: url("jpeg/paper.jpg");
+      text-align: left;
+      padding-left: 10px;
+    }
+
+    aside {
+      display: flex;
+      flex: 1 1 auto;
+      min-width: 380px;
+      flex-direction: column;
+      background-color: #D6EAF8;
+      padding-left: 10px;
+      padding-right: 15px;
+    }
+
+
+
+    .profile {
+      margin-top: 20px;
+      margin-bottom: 0px;
+      margin-left: auto;
+      margin-right: 0px;
+      width: 380px;
+      height: 180px;
+      border-radius: 10px;
+      box-shadow: 0px 0px 10px #111;
+      overflow: hidden;
+      background-color: white;
+      position: relative;
+    }
+
+    .profileDescription{
+      margin-top: 2px;
+      color:#996600;
+    }
+
+    .profile h3 {
+      margin: 10px 0px 0px 10px;
+      float: left;
+      text-align: left;
+    }
+
+    .profileTitle {
+      margin: 0px 10px 0px 12px;
+      float: left;
+      text-align: left;
+      color: black;
+      font-weight: bold;
+    }
+
+    .profile img {
+      height: 100%;
+      float: left;
+    }
+
+    .profile h4 {
+      position: absolute;
+      display: block;
+      margin-top: 80px;
+      margin-left: 220px;
+    }
+
+    .profile ul {
+      position: absolute;
+      display: block;
+      margin-left: -40px;
+      bottom: -15px;
+      left: 50%;
+      font-weight: bold;
+    }
+
+    .profile ul p {
+      float: none;
+    }
+
+
+
+    .profile ul li {
+      font-size: : 12px;
+      margin-left: 50px;
+    }
+
+      footer {
+      width: 100%;
+      text-align: left;
+      height: 60px;
+      font-size: 12px;
+      color: black;
+      font-weight: bold;
+      background-color: hsla(0, 100%, 70%, 0.3);
+      margin-top: 2px;
+    }
+
+    #copyright {
+      position: absolute;
+      text-align: left;
+      margin-right: 10px;
+      margin-top: 2px;
+    }
+
+    footer > p {
+
+      float: right;
+
+      color: white;
+
+      font-family: sans-serif;
+
+      font-size: 12px;
+
+      margin-right: 10px;
+
+      margin-left: 10px;
+
+      margin-top: 10px;
+
+    }
 }
